# Avadhana

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.prod.yml
.github/workflows/: ai-coordinator.yml  ci.yaml
apps/mobile/: .env.example  README.md  app.json  package-lock.json  package.json
apps/mobile/src/app/: _layout.tsx  login.tsx  signup.tsx
apps/mobile/src/context/: AuthContext.tsx
architecture/: README.md  avadhana-architecture.drawio
architecture/modules/: 01-user-commitment.drawio  02-problem-hierarchy.drawio  03-moderation-appeals.drawio  04-ai-coordination-tasks.drawio  05-solution-marketplace.drawio  06-marketplace-matching-flow.drawio
audits/: business-viability-audit-2026-07-10.md  scalability-audit-2026-07-10.md  security-audit-2026-07-10.md  usability-audit-2026-07-10.md
docs/: free-tier-deployment.md  landing-page-copy-draft.md  legal-draft-DO-NOT-USE-WITHOUT-REVIEW.md  local-dev.md  sarvam-startup-program-application.md  security-policy.md  testing-strategy.md  vps-deployment.md
docs/dev-environment/: podman-and-k8s.md
infra/k8s/ai-coordinator-worker/: README.md  configmap.yaml  deployment.yaml
infra/k8s/backend-api/: PORT-FORWARDING.md  README.md  configmap.yaml  deployment.yaml  service.yaml
infra/k8s/postgres/: README.md  service.yaml  statefulset.yaml
infra/k8s/redis/: README.md  deployment.yaml  service.yaml
infra/k8s/sarvam-mock/: deployment.yaml  service.yaml
infra/k8s/scripts/: README.md  create-secrets.sh  port-forward-watchdog.sh
services/ai-coordinator-worker/: .containerignore  Containerfile  README.md  db_config.py  pyproject.toml  sarvam_config.py  worker.py
services/ai-coordinator-worker/impl/: __init__.py  marketplace_db.py  marketplace_matching_job.py  rq_job_queue.py  sarvam_client.py
services/ai-coordinator-worker/interfaces/: __init__.py  job_queue.py  sarvam_client.py
services/ai-coordinator-worker/tests/: test_marketplace_matching_job.py  test_sarvam_client.py  test_sarvam_config.py
services/backend-api/: Containerfile  README.md  alembic.ini  pyproject.toml
services/backend-api/app/: main.py  schemas.py  schemas_marketplace.py
services/backend-api/app/core/: __init__.py  auth_dependencies.py  config.py  presentation.py  rate_limit.py  security.py  time.py
services/backend-api/app/db/: __init__.py  base.py  session.py
services/backend-api/app/impl/: __init__.py  embeddings_client.py  embeddings_client_mock.py  health.py  job_enqueuer.py  repositories.py  service_info.py
services/backend-api/app/interfaces/: __init__.py  embeddings_client.py  health.py  job_enqueuer.py  repositories.py  service_info.py
services/backend-api/app/models/: __init__.py  checkpoint.py  commitment.py  feed.py  moderation.py  problem.py  resolution_objection.py  user.py
services/backend-api/app/models/marketplace/: __init__.py  billing.py  embedding.py  matching.py  organization.py  rfp.py  solution.py
services/backend-api/app/routers/: __init__.py  auth.py  commitments.py  feed.py  moderation.py  problems.py  users.py
services/backend-api/app/routers/marketplace/: __init__.py  matches.py  matching.py  organizations.py  promotion.py  rfps.py  solutions.py
services/backend-api/app/services/: __init__.py  checkpoint_service.py  commitment_gate.py  commitment_service.py  embeddings_provider.py  errors.py  feed_service.py  history_service.py  marketplace_matching.py  marketplace_service.py  moderation_service.py  presenters.py  presenters_marketplace.py  problem_lifecycle_service.py
services/backend-api/migrations/: env.py
services/backend-api/migrations/versions/: 53bc84afb894_initial_schema.py  866f3c167cb7_resolution_objections.py  a1b2c3d4e5f6_marketplace_match_runs_and_solution_.py  c11f09a3a44d_marketplace_foundation_organizations_.py  c1454ec57882_marketplace_billing_events.py  da05f3e09e10_moderation_override_baseline.py  f02dd236afbf_marketplace_embedding_vectors.py  f6578bbbc579_comment_parent_comment_id_threading.py
services/backend-api/tests/integration/: conftest.py  test_api_auth_and_users.py  test_api_checkpoint_flow.py  test_api_commitments.py  test_api_feed.py  test_api_marketplace_billing.py  test_api_marketplace_matches.py  test_api_marketplace_matching.py  test_api_marketplace_organizations.py  test_api_marketplace_promotion.py  test_api_marketplace_rfps.py  test_api_marketplace_solutions.py  test_api_moderation.py  test_api_problem_lifecycle.py  test_api_problems_pagination.py  test_api_security_hardening.py  test_marketplace_embeddings.py  test_models.py
services/backend-api/tests/unit/: fakes.py  test_checkpoint_service.py  test_commitment_service.py  test_embeddings_client.py  test_embeddings_provider.py  test_feed_service.py  test_history_service.py  test_marketplace_matching.py  test_moderation_service.py  test_presentation.py  test_problem_lifecycle_service.py
services/moderation/: Containerfile  README.md  pyproject.toml
services/moderation/app/: dependencies.py  main.py
services/moderation/app/impl/: __init__.py  health.py  service_info.py
services/moderation/app/interfaces/: __init__.py  health.py  service_info.py
services/sarvam-mock/: .dockerignore  Containerfile  README.md  pyproject.toml
services/sarvam-mock/app/: main.py
services/web/: .env.example  Containerfile  README.md  index.html  nginx.conf  package-lock.json  vite.config.ts
services/web/src/: App.tsx  main.tsx  vite-env.d.ts
services/web/src/context/: AuthContext.tsx  OrganizationContext.tsx
services/web/src/data/: commitmentIdCache.ts  focusSlotsRefresh.ts  index.ts  interfaces.ts  marketplaceInterfaces.ts
services/web/src/routes/: CoordinatorPage.module.css  CoordinatorPage.tsx  DashboardPage.module.css  DashboardPage.tsx  DiscoverPage.module.css  DiscoverPage.tsx  GraphPage.module.css  GraphPage.tsx  LoginPage.module.css  LoginPage.tsx  MarketplacePage.module.css  MarketplacePage.tsx  NewProblemPage.module.css  NewProblemPage.tsx  NewRFPPage.tsx  NewSolutionPage.tsx  ProblemPage.module.css  ProblemPage.tsx  ProfilePage.module.css  ProfilePage.tsx  (+4 more)
(+59 files in other folders)
