[project]
name = "avadhana-ai-coordinator-worker"
version = "0.1.0"
description = "Avadhana AI Coordinator Worker — RQ job-queue with a real SARVAM AI client (issue #19); real coordination jobs (summarize/checklist/off-topic) pending (issues #20-27)."
requires-python = ">=3.12"
dependencies = [
    "rq>=1.16,<2.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    # Database access for the Marketplace matching job (issue #68) —
    # this service's first-ever DB dependency. `infra/k8s/ai-coordinator
    # -worker/configmap.yaml` and `docker-compose.prod.yml` already wire
    # a DATABASE_URL env var into this service's deployment config
    # (previously unused), so the infra anticipated this. Versions
    # pinned to match services/backend-api/pyproject.toml exactly, since
    # both services read/write the same Postgres tables and should
    # behave identically at the driver level (same psycopg major
    # version, same SQLAlchemy major version). Deliberately SQLAlchemy
    # Core only, no ORM model classes duplicated here — see
    # impl/marketplace_matching_job.py's module docstring for why.
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Without this, `pip install -e ".[dev]"` fails outright: setuptools sees
# two top-level packages (impl/, interfaces/) in a flat layout and refuses
# to guess which one is "the" package (see backend-api/pyproject.toml for
# the same pattern). Include both explicitly.
include = ["impl*", "interfaces*"]

[tool.setuptools]
# worker.py, sarvam_config.py, and db_config.py are loose top-level
# modules (not inside a package dir) — must be listed explicitly too, or
# they're silently excluded from the install and `import worker` /
# `import sarvam_config` / `import db_config` fails for anything that
# imports them (e.g. tests/test_sarvam_config.py,
# tests/test_marketplace_matching_job.py).
py-modules = ["worker", "sarvam_config", "db_config"]

[tool.pytest.ini_options]
pythonpath = ["."]
