[project]
name = "avadhana-backend-api"
version = "0.1.0"
description = "Avadhana Backend API service — SLC v1 commitment/problem/feed API."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "alembic>=1.13,<2.0",
    "pydantic[email]>=2.7,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=4.0,<5.0",
    "pyjwt>=2.8,<3.0",
    # In-memory rate limiting (see app/core/rate_limit.py). Deliberately
    # NOT Redis-backed: this is a single-VPS solo-dev pilot with no
    # multi-replica deployment planned (docker-compose.prod.yml runs one
    # backend-api process), and Redis is currently only used by
    # ai-coordinator-worker's job queue — adding it as a backend-api
    # dependency just for rate limiting would be disproportionate. If
    # this service is ever horizontally scaled, revisit with a
    # Redis-backed limiter (slowapi supports this via the `limits`
    # storage backends) so limits are shared across replicas.
    "slowapi>=0.1.9,<1.0",
    # SQLAlchemy `Vector` column type for the Solution Marketplace's
    # EmbeddingVector storage (CLAUDE.md "Embeddings provider": "Store
    # vectors in Postgres via the pgvector extension"). Only used when
    # the bound engine's dialect is postgresql — see
    # app/models/marketplace/embedding.py's PortableVector, which falls
    # back to plain JSON on SQLite (this repo's integration-test
    # dialect) since pgvector's type has no SQLite equivalent. Pure
    # Python, no compiled/native dependency, so this is a lightweight
    # addition either way.
    "pgvector>=0.3,<1.0",
    # Producer-side client for the shared Redis/RQ job-queue broker that
    # `services/ai-coordinator-worker` already listens on (CLAUDE.md
    # "Service boundaries": "reuses the existing Redis/RQ job-queue
    # infrastructure ... same broker"). This is the first thing in
    # backend-api that needs to ENQUEUE a job (issue #68's RFP matching
    # trigger) rather than just calling another service's HTTP API — see
    # app/interfaces/job_enqueuer.py's module docstring. Versions pinned
    # to match services/ai-coordinator-worker/pyproject.toml exactly so
    # both processes speak the same RQ wire format against the same
    # broker.
    "rq>=1.16,<2.0",
    "redis>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Restrict discovery to the `app` package — this repo also has a
# top-level `migrations/` directory (Alembic) and `tests/` directory
# that are not meant to be installed as importable packages of the
# distribution.
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
