[project]
name = "avadhana-moderation"
version = "0.1.0"
description = "Avadhana Moderation service — minimal skeleton pending real off-topic detection/auto-block logic."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
